# tauri-specta-example

./: pnpm-lock.yaml
src/: bindings.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
