[package]
name = "tauri-specta-example-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin = { version = "2.0" }
specta = { version = "=2.0.0-rc.20" }
specta-typescript = { version = "0.0.7" }
specta-jsdoc = { version = "0.0.7" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript", "javascript"] }
tauri-plugin-os = "^2.0.0-alpha.2"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

